--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.vscode
 # Created by .ignore support plugin (hsz.mobi)
 ### Linux template
 *~
@@ -120,6 +121,7 @@ Temporary Items
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+.idea
 
 # User-specific stuff
 .idea/**/workspace.xml
